--- a/index.html
+++ b/index.html
@@ -3,11 +3,45 @@
 <head>
   <meta charset="utf-8">
   <title>Redirection...</title>
-  <meta http-equiv="refresh" content="0; URL=https://t.me/mini_jessie_bot">
+  <meta http-equiv="refresh" content="3; URL=https://t.me/mini_jessie_bot">
+  <style>
+    body {
+      background-color: #000000;
+      color: orange;
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin-top: 20%;
+    }
+    h1 {
+      font-size: 2em;
+      margin-bottom: 20px;
+    }
+    a {
+      color: orange;
+      text-decoration: underline;
+    }
+    #countdown {
+      font-weight: bold;
+      font-size: 1.5em;
+    }
+  </style>
 </head>
 <body>
-  <p>Redirection en cours... Si rien ne se passe, 
-     <a href="https://t.me/mini_jessie_bot">cliquez ici</a>.
+  <h1>Vous allez être redirigé vers Telegram...</h1>
+  <p>Redirection automatique dans <span id="countdown">3</span> secondes.<br>
+     Si rien ne se passe, <a href="https://t.me/mini_jessie_bot">cliquez ici</a>.
   </p>
+
+  <script>
+    let count = 3;
+    const countdownEl = document.getElementById("countdown");
+    const timer = setInterval(() => {
+      count--;
+      countdownEl.textContent = count;
+      if (count === 0) {
+        clearInterval(timer);
+      }
+    }, 1000);
+  </script>
 </body>
 </html>
