--- a/index.html
+++ b/index.html
@@ -3,26 +3,18 @@
 <head>
   <meta charset="utf-8">
   <title>Redirection...</title>
-  <!-- Redirection automatique après 3 secondes -->
   <meta http-equiv="refresh" content="3; URL=https://t.me/mini_jessie_bot">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
-      background: #000;
+      background-color: #000000;
       color: orange;
       font-family: Arial, sans-serif;
       text-align: center;
-      margin: 0;
-      padding: 40px 20px;
+      margin-top: 20%;
     }
     h1 {
       font-size: 2em;
-      margin-bottom: 15px;
-    }
-    p {
-      font-size: 1.2em;
-      margin: 10px 0;
+      margin-bottom: 20px;
     }
     a {
       color: orange;
@@ -30,39 +22,24 @@
     }
     #countdown {
       font-weight: bold;
-      font-size: 1.4em;
-    }
-    video {
-      margin-top: 25px;
-      width: 80%;
-      max-width: 600px;
-      border: 2px solid orange;
-      border-radius: 12px;
+      font-size: 1.5em;
     }
   </style>
 </head>
 <body>
-  <h1>Vous allez être redirigé vers Telegram…</h1>
-  <p>Redirection automatique dans <span id="countdown">3</span> secondes.</p>
-  <p>Si rien ne se passe, <a href="https://t.me/mini_jessie_bot">cliquez ici</a>.</p>
-
-  <!-- Vidéo -->
-  <video autoplay muted loop playsinline>
-    <source src="video.mp4" type="video/mp4">
-    Votre navigateur ne supporte pas la lecture vidéo.
-  </video>
+  <h1>Vous allez être redirigé vers Telegram...</h1>
+  <p>Redirection automatique dans <span id="countdown">3</span> secondes.<br>
+     Si rien ne se passe, <a href="https://t.me/mini_jessie_bot">cliquez ici</a>.
+  </p>
 
   <script>
-    // Compte à rebours
     let count = 3;
-    const el = document.getElementById("countdown");
+    const countdownEl = document.getElementById("countdown");
     const timer = setInterval(() => {
       count--;
-      if (count <= 0) {
+      countdownEl.textContent = count;
+      if (count === 0) {
         clearInterval(timer);
-        el.textContent = 0;
-      } else {
-        el.textContent = count;
       }
     }, 1000);
   </script>
