--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
   <!-- Intégration Imgur -->
   <div class="video">
-    <blockquote class="imgur-embed-pub" lang="en" data-id="a/Cz30I93" data-context="false">
-      <a href="//imgur.com/a/Cz30I93"></a>
+    <blockquote class="imgur-embed-pub" lang="en" data-id="a/PZBmzku" data-context="false">
+      <a href="//imgur.com/a/PZBmzku"></a>
     </blockquote>
     <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
   </div>
