--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <!-- Intégration Imgur -->
   <div class="video">
-    <blockquote class="imgur-embed-pub" lang="en" data-id="a/PZBmzku" data-context="false">
+    <blockquote class="imgur-embed-pub" lang="en" data-id="a/PZBmzku">
       <a href="//imgur.com/a/PZBmzku"></a>
     </blockquote>
     <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
