--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
       display: flex;
       justify-content: center;
     }
+    video {
+      max-width: 90%;
+      border-radius: 12px;
+    }
   </style>
 </head>
 <body>
@@ -41,12 +45,12 @@
   <p>Redirection automatique dans <span id="countdown">8</span> secondes.</p>
   <p>Si rien ne se passe, <a href="https://t.me/mini_jessie_bot">cliquez ici</a>.</p>
 
-  <!-- Intégration Imgur -->
+  <!-- Vidéo autoplay -->
   <div class="video">
-    <blockquote class="imgur-embed-pub" lang="en" data-id="a/PZBmzku">
-      <a href="//imgur.com/a/PZBmzku"></a>
-    </blockquote>
-    <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+    <video autoplay muted playsinline>
+      <source src="https://i.imgur.com/fsenZCx.mp4" type="video/mp4">
+      Votre navigateur ne supporte pas la vidéo.
+    </video>
   </div>
 
   <script>
